# world-chat-backend

./: .dockerignore  .env.example  .gitignore  .taplo.toml  CI_TRIGGER_SETUP.md  CLAUDE.md  Cargo.toml  ENCLAVE_README.md  Makefile  PROXY_SOLUTIONS.md  README.md  aws-seed.sh  clippy.toml  deny.toml  docker-compose.yml  drill.yml  get_jwt.py  notes.md  rust-toolchain.toml  rustfmt.toml  start-all.sh  test-vsock.sh  test_auth.sh
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build-and-deploy.yml  ci.yml  relyance-sci.yml  security-scorecard-deploy.yml  update-proto.yml
backend/: .env.example  Cargo.toml  Dockerfile
backend/src/: extractors.rs  lib.rs  main.rs  server.rs  state.rs
backend/src/bucket/: client.rs  error.rs  mod.rs
backend/src/enclave_worker_api/: mod.rs
backend/src/handlers/: hello.rs  images.rs  mod.rs
backend/src/image_storage/: mod.rs
backend/src/jwt/: error.rs  jwk_ext.rs  mod.rs  signer.rs  tests.rs  types.rs
backend/src/media_storage/: error.rs  mod.rs
backend/src/middleware/: auth.rs  client_info.rs  mod.rs
backend/src/push_id_challenger/: mod.rs
backend/src/routes/: auth.rs  docs.rs  health.rs  images.rs  jwks.rs  media.rs  mod.rs
backend/src/routes/v1/: attestation.rs  auth.rs  config.rs  group_invites.rs  group_join_requests.rs  media.rs  mod.rs  notifications.rs  subscriptions.rs  subsriptions.rs
backend/src/types/: environment.rs  error.rs  extractors.rs  mod.rs
backend/src/world_id/: error.rs  mod.rs  proof.rs  request.rs  verifier.rs
backend/src/zkp/: error.rs  mod.rs  proof.rs  request.rs  types.rs  verifier.rs
backend/tests/: auth_tests.rs  notification_subscribe_tests.rs  notification_unsubscribe_tests.rs  notifications_tests.rs  notifications_unsubscribe_tests.rs  push_subscription_deletion_tests.rs  push_subscriptions_creation_test.rs  upload_integration.rs  upload_tests.rs
backend/tests/common/: dynamodb_setup.rs  e2e_utils.rs  mod.rs  push_subscription_utils.rs  s3_utils.rs  test_router.rs  test_setup.rs  utils.rs
backend/tests/e2e/: main.rs  test_setup.rs  upload_e2e.rs  utils.rs
backend/tests/integration/: main.rs  upload_tests.rs
docs/: key-management.md
e2e/: Cargo.toml  README.md
e2e/src/: proof.rs
enclave-worker/: .env.example  .env.test  Cargo.toml  Dockerfile
enclave-worker/src/: cache.rs  lib.rs  main.rs  redis.rs  server.rs
enclave-worker/src/notification_consumer/: mod.rs
enclave-worker/src/notification_processor/: mod.rs
enclave-worker/src/pontifex_client/: mod.rs
enclave-worker/src/routes/: attestation.rs  health.rs  mod.rs  push_id_challenge.rs
enclave-worker/src/types/: environment.rs  error.rs  mod.rs
enclave-worker/tests/: cache_manager.rs
enclave-worker/tests/utils/: mod.rs
notification-worker/: .env.example  .env.test  Cargo.toml  Dockerfile  build.rs
notification-worker/src/: health.rs  lib.rs  main.rs  utils.rs  worker.rs  xmtp_utils.rs
notification-worker/src/types/: environment.rs  mod.rs
notification-worker/src/worker/: config.rs  coordinator.rs  message_processor.rs  mod.rs  processor.rs  stream_listener.rs  types.rs  xmtp_listener.rs
notification-worker/tests/: message_filtering_tests.rs
notification-worker/tests/utils/: dynamodb_setup.rs  mod.rs  sqs_setup.rs  xmtp.rs
scripts/: build-and-run-enclave.sh  dev-cycle.sh  fast-deploy.sh  manage-enclave.sh  run-enclave-worker.sh  run-secure-enclave.sh  setup-proxy-with-allowlist.sh  setup-vsock-proxy.sh  test-docker-build.sh  verify-enclave-pcrs.sh
secure-enclave/: Cargo.toml  Dockerfile  Dockerfile.fast  README.md
secure-enclave-init/: .gitignore  Cargo.toml
secure-enclave-init/src/: main.rs  redis.rs
secure-enclave/src/: encryption.rs  lib.rs  main.rs  state.rs
secure-enclave/src/pontifex_server/: attestation_doc.rs  health.rs  info.rs  initialize.rs  mod.rs  notification.rs  public_key.rs  push_id_challenge.rs  secret_key.rs
secure-enclave/tests/: encryption_tests.rs
servers/backend-server/: Cargo.toml
servers/backend-server/src/: main.rs
servers/enclave-server/: Cargo.toml
servers/enclave-server/src/: main.rs
services/enclave-service/: Cargo.toml
services/enclave-service/src/: lib.rs
services/enclave-service/src/http/: handlers.rs  mod.rs
services/image-service/: Cargo.toml
services/image-service/src/: lib.rs
services/image-service/src/http/: handlers.rs  mod.rs
services/notification-service/: Cargo.toml
services/notification-service/src/: lib.rs
services/notification-service/src/http/: handlers.rs  mod.rs
shared/attestation-verifier/: Cargo.toml
shared/attestation-verifier/src/: attestation_verifier.rs  constants.rs  lib.rs  types.rs
shared/backend_storage/: Cargo.toml
shared/backend_storage/src/: lib.rs
shared/backend_storage/src/auth_proof/: error.rs  mod.rs
shared/backend_storage/src/group_invite/: error.rs  mod.rs
shared/backend_storage/src/group_join_request/: error.rs  mod.rs
shared/backend_storage/src/push_notification/: error.rs  mod.rs
shared/backend_storage/src/push_subscription/: error.rs  mod.rs
shared/backend_storage/src/queue/: error.rs  mod.rs  sqs_queue.rs  types.rs
shared/backend_storage/src/queue/notification/: mod.rs
shared/backend_storage/src/queue/subscription_request/: mod.rs
shared/backend_storage/tests/: auth_proof_tests.rs  group_invite_table_tests.rs  group_join_request_table_tests.rs  notification_queue_tests.rs  push_notification_tests.rs  push_subscription_table_tests.rs  subscription_request_queue_tests.rs
shared/backend_storage/tests/common/: mod.rs  queue_utils.rs
shared/common-types/: Cargo.toml
shared/common-types/src/: lib.rs
shared/datadog-metrics/: Cargo.toml
shared/enclave-types/: Cargo.toml
shared/enclave-types/src/: lib.rs
shared/models/: Cargo.toml
shared/models/src/: lib.rs
shared/push_notification_storage/: .env.example  Cargo.toml
shared/push_notification_storage/src/: error.rs  lib.rs
shared/push_notification_storage/tests/: integration_tests.rs
shared/queue/: Cargo.toml
shared/queue/src/: lib.rs
shared/storage/: Cargo.toml
shared/storage/src/: lib.rs
(+2 files in other folders)
