[workspace]
members = [
    "backend",
    "enclave-worker",
    "secure-enclave",
    "shared/backend_storage",
    "notification-worker",
]
resolver = "2"

[workspace.package]
edition      = "2021"
rust-version = "1.85.0"
version      = "0.1.0"
license      = "MIT"

[workspace.dependencies]
# Web framework
aide = { version = "0.13.4", features = [
    "axum",
    "scalar",
    "macros",
] }
axum-jsonschema = { version = "0.8.0", features = ["aide"] }
axum = "0.7.9"
tower      = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace", "timeout"] }

# Async runtime
tokio = { version = "1.44.1", features = ["full"] }

# Serialization
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow    = "1.0"
thiserror = "2.0"

# Encoding
base64 = "0.22.1"
hex = "0.4.3"

# Logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# HTTP
http = "1.1"

# AWS SDK
aws-config = "1.5"
aws-sdk-sqs = "1.64"
aws-sdk-dynamodb = "1.82"
aws-sdk-s3 = "1.82"

# Schema generation for OpenAPI
schemars = { version = "0.8.21", features = ["derive"] }

# DynamoDB serialization
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }

# Strum
strum = { version = "0.24.1", features = ["derive"] }

# Internal workspace dependencies
backend_storage = { path = "shared/backend_storage" }

# Test dependencies
http-body-util = "0.1.3"
tokio-test = "0.4.4"
tempfile = "3.20.0"
uuid = { version = "1.17.0", features = ["v4"] }
dotenvy = "0.15.7"
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"], default-features = false }
sha2 = "0.10"
url = "2.5"
serial_test = "3.2.0"
rand = "0.8"

