[workspace]
members = [
    "backend",
    "enclave-worker",
    "secure-enclave",
    "secure-enclave-init",
    "shared/backend_storage",
    "notification-worker",
     # TODO remove this and move types to common-types
    "shared/enclave-types",
    "shared/common-types",
    "shared/attestation-verifier",
]
resolver = "2"

[workspace.package]
edition      = "2021"
rust-version = "1.86.0"
version      = "0.1.0"
license      = "MIT"

[workspace.dependencies]
# Web framework
aide = { version = "0.15.1", features = [
    "axum",
    "scalar",
    "macros",
    "axum-json",
    "axum-query",
    "axum-matched-path"
] }
axum = "0.8"
tower      = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace", "timeout"] }
hyper = { version = "0.14" }

# Async 
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7.11" }
futures = "0.3.31"
async-trait = "0.1.89"

# Serialization
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow    = "1.0"
thiserror = "2.0"

# Encoding
base64 = "0.22.1"
hex = "0.4.3"

# Logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# HTTP
http = "1.1"

# AWS SDK
aws-config = "1.8"
aws-sdk-sqs = "1.64"
aws-sdk-dynamodb = "1.82"
aws-sdk-s3 = "1.82"
aws-sdk-kms = "1.82"

schemars = { version = "0.9.0", features = ["derive"] }

# DynamoDB serialization
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }

# Strum
strum = { version = "0.26.3", features = ["derive"] }

# Validation
axum-valid = { version = "0.24.0", features = ["aide", "validator"] }
validator = { version = "0.20", features = ["derive"] }
regex = "1.11"

# Internal workspace dependencies
backend_storage = { path = "shared/backend_storage" }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }

# Mime types
mime = "0.3.0"

# Crypto
p256 = { version = "0.13", features = ["ecdsa", "pkcs8"] }

hmac = "0.12.1"

# Enclave types
enclave-types = { path = "shared/enclave-types" }

# Common types 
common-types = { path = "shared/common-types" }

# Attestation verifier
attestation-verifier = { path = "shared/attestation-verifier" }

# Pontifex
pontifex = { version = "1.1.1" }

# Datadog tracing
datadog-tracing = { version = "0.3.0", features = ["axum"] }
metrics = "0.24.2"
metrics-exporter-dogstatsd = "0.9.6"

# Crypto box
crypto_box = { version = "0.9.1" }

# Redis (We use Elasticache)
redis = { version = "0.32.5" }

# Test dependencies
http-body-util = "0.1.3"
tokio-test = "0.4.4"
tempfile = "3.20.0"
uuid = { version = "1.17.0", features = ["v4"] }
dotenvy = "0.15.7"
sha2 = "0.10"
url = "2.5"
serial_test = "3.2.0"
rand = "0.8"

