[package]
name = "backend"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
# Web framework
aide = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Validation
validator = { workspace = true }
axum-valid = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# AWS SDK
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }

# Time
chrono = { workspace = true }

# Schema generation for OpenAPI
schemars = { workspace = true }

# Environment loading
dotenvy = { workspace = true }

[dev-dependencies]
http-body-util = { workspace = true }
tower = { workspace = true }
tokio-test = { workspace = true }
tempfile = { workspace = true }
uuid = { workspace = true }
