[package]
name = "backend"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
# Web framework
aide = { workspace = true }
axum = { workspace = true }
axum-jsonschema = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Async 
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Datadog tracing
datadog-tracing = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# AWS SDK
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-sdk-sqs = { workspace = true }
aws-sdk-kms = { workspace = true }

# Time
chrono = { workspace = true }

# Schema generation for OpenAPI
schemars = { workspace = true }

# Encoding
base64 = { workspace = true }
hex = { workspace = true }

# Backend Storage
backend_storage = { workspace = true }

# World ID
walletkit-core = { version = "0.1.4", features= ["semaphore"], default-features = false }
semaphore-rs = { version = "0.5" }
reqwest = { workspace = true }

# Mime types
mime = { workspace = true }

# Crypto / hashing
p256 = { workspace = true }
sha2 = { workspace = true }

common-types = { workspace = true }

[features]
test-utils = []

[dev-dependencies]
backend = { path = ".", features = ["test-utils"] }
http-body-util = { workspace = true }
tower = { workspace = true }
tokio-test = { workspace = true }
tempfile = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
url = { workspace = true }
dotenvy = { workspace = true }
serial_test = { workspace = true }
rand = { workspace = true }
http = { workspace = true }
aws-credential-types = { version = "1.2.5" , features = ["hardcoded-credentials"]}
