[package]
name = "enclave-worker"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[[bin]]
name = "enclave-worker"
path = "src/main.rs"

[dependencies]
# Web framework
aide = { workspace = true }
axum = { workspace = true }
axum-jsonschema = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Datadog tracing
datadog-tracing = { version = "0.3.0", features = ["axum"] }
datadog-metrics = { workspace = true }

# AWS SDK
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-sdk-sqs = { workspace = true }

backend_storage = { workspace = true }

schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }

pontifex = { workspace = true, features = ["client"] }

enclave-types = { workspace = true }
