[package]
name = "enclave-worker"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[[bin]]
name = "enclave-worker"
path = "src/main.rs"

[dependencies]
# Web framework
aide = { workspace = true }
axum = { workspace = true }
axum-jsonschema = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Datadog tracing
datadog-tracing = { version = "0.3.0", features = ["axum"] }
metrics = { workspace = true }
metrics-exporter-dogstatsd = { workspace = true }

# AWS SDK
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-sdk-sqs = { workspace = true }

backend_storage = { workspace = true }

schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }

pontifex = { workspace = true, features = ["client"] }

enclave-types = { workspace = true }
common-types = { workspace = true }

base64 = { workspace = true }
hex = { workspace = true }

redis = { workspace = true, features = ["tokio-comp", "aio", "connection-manager"]}

[dev-dependencies]
uuid = { workspace = true }
dotenvy = { workspace = true }
pretty_assertions = "1.4.1"
