[package]
name = "notification-worker"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
# Workspace dependencies
anyhow = { workspace = true }
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-sdk-sqs = { workspace = true }
backend_storage = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Configuration
clap = { version = "4.5", features = ["derive", "env"] }
toml = "0.8"

# Async utilities
futures = "0.3"
tokio-stream = "0.1"
tokio-util = "0.7"
flume = "0.11"

# For future XMTP integration
tonic = { version = "0.12", features = ["transport", "tls", "tls-webpki-roots"] }
prost = "0.13"
prost-types = "0.13"
rustls = { version = "0.23", features = ["ring"] }

sha2 = { workspace = true }
hmac = { workspace = true }
base64 = {workspace = true}
hex = { workspace = true }

# Testing dependencies
[dev-dependencies]
uuid = { workspace = true }
serial_test = { workspace = true }
dotenvy = { workspace = true }
pretty_assertions = "1.4.1"

# Build dependencies
[build-dependencies]
tonic-build = "0.12"         # brings in prost-build automatically
glob        = "0.3"          # globs proto/** recursively
protoc-bin-vendored = "3"    # vendored protoc binary
