[package]
name = "secure-enclave-init"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[[bin]]
name = "secure-enclave-init"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
pontifex = { workspace = true, features = ["client"] }
enclave-types = { workspace = true }
datadog-tracing = { workspace = true }
