[package]
name = "secure-enclave"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[[bin]]
name = "secure-enclave"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { workspace = true }


crypto_box = { workspace = true, features = ["seal"] }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Pontifex server
pontifex = { workspace = true, features = ["server", "http", "nsm"] }

enclave-types = { workspace = true }

serde_json = { workspace = true }

hyper = { workspace = true }
