[package]
edition = { workspace = true }
name    = "backend-server"
version = { workspace = true }
license = { workspace = true }

[[bin]]
name = "backend-server"
path = "src/main.rs"

[dependencies]
# Web framework
axum       = { workspace = true }
tower      = { workspace = true }
tower-http = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Services
image-service        = { path = "../../services/image-service" }
notification-service = { path = "../../services/notification-service" }

# Logging
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }

