[package]
name = "enclave-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "enclave-server"
path = "src/main.rs"

[dependencies]
# Web framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Async runtime
tokio.workspace = true

# Services
enclave-service = { path = "../../services/enclave-service" }

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
anyhow.workspace = true