[package]
edition = { workspace = true }
name    = "enclave-service"
version = { workspace = true }
license = { workspace = true }

[dependencies]
axum       = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
tokio      = { workspace = true }
tower      = { workspace = true }
tracing    = { workspace = true }

