[package]
edition = { workspace = true }
name    = "image-service"
version = { workspace = true }

[dependencies]
axum       = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
tokio      = { workspace = true }
tower      = { workspace = true }
tracing    = { workspace = true }

[lints]
workspace = true
