[package]
name = "attestation-verifier"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
aws-nitro-enclaves-nsm-api = "0.4.0"
ciborium = "0.2.2"
coset = "0.3.8"
x509-cert = { version = "0.2.5", features = ["pem"] }
webpki = "0.22"
once_cell = "1.19"
thiserror = { workspace = true }
serde = { workspace = true }
base64 = { workspace = true }
hex = "0.4"
p384 = { version = "0.13", features = ["ecdsa"] }
crypto_box = { version = "0.9", features = ["std", "seal"] }
