[package]
name = "backend_storage"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
# AWS SDK
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-sdk-sqs = { workspace = true }

# Async
tokio = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time
chrono = { workspace = true }

# DynamoDB serialization
serde_dynamo = { workspace = true }

# Logging
tracing = { workspace = true }

# OpenTelemetry for distributed tracing
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
tracing-opentelemetry = { workspace = true }

# Strum
strum = { workspace = true }

# JSON schema
schemars = { workspace = true }

# Random number generation
rand = { workspace = true }

futures = { workspace = true }

# UUID generation
uuid = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
aws-credential-types = { version = "1.2.5" , features = ["hardcoded-credentials"]}
pretty_assertions = "1.4.1"
