[package]
name = "common-types"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
# Error handling
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }

schemars = { workspace = true }

# Enum utilities
strum = { workspace = true }
