[package]
name = "enclave-types"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time
chrono = { workspace = true }

# DynamoDB serialization
serde_dynamo = { workspace = true }

# Strum
strum = { workspace = true }

