[package]
name = "enclave-types"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
# Error handling
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }

pontifex = { workspace = true, features = ["nsm", "client"] }
